--- a/src/App.css
+++ b/src/App.css
@@ -19,11 +19,11 @@
 }
 
 .header {
+  position: relative;
   display: flex;
   justify-content: center;
   align-items: center;
   width: 1211px;
-  padding: 20px 0;
   gap: 0px;
   border-radius: 10px;
   opacity: 0px;
@@ -56,8 +56,21 @@
 
 .transactions {
   width: 738.33px;
-  gap: 0px;
   border-radius: 15px;
   background: #FFFFFF;
-
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 20px;
+}
+.barContainer {
+  padding-left: 20px;
+  border-radius: 15px;
+  background: #FFFFFF;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 20px;
 }
