--- a/src/components/ListItem.css
+++ b/src/components/ListItem.css
@@ -1,3 +1,7 @@
+.listWrapper{
+    display: flex;
+    flex-direction: column;
+}
 .listContainer {
     display: flex;
     align-items: center;
@@ -44,7 +48,6 @@
     width: 705px;
     height: 0px;
     border: 1px solid #9B9B9B;
-    margin: auto;
 }
 
 .priceButtonContainer{
@@ -78,6 +81,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    cursor: pointer;
 }
 
 .deleteButton {
